--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "merkletreejs": "^0.2.9",
     "node-fetch": "^2.6.0",
     "ripemd160": "^2.0.2",
-    "rxjs": "^7.4.0",
+    "rxjs": "6.6.7",
     "tweetnacl": "^1.0.3",
     "utf8": "^2.1.2",
     "ws": "^7.3.1"
