--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "bugs": {
-    "url": "http://gitlab.local.bitxor.org/bitxor-nodejs-sdk/bitxor-sdk/issues"
+    "url": "https://github.com/BitxorCorp/Bitxor-SDK-JavaScript/issues"
   },
   "dependencies": {
     "@js-joda/core": "^3.2.0",
@@ -56,7 +56,7 @@
   "engines": {
     "node": ">=12.22.1"
   },
-  "homepage": "http://gitlab.local.bitxor.org/bitxor-nodejs-sdk/bitxor-sdk#readme",
+  "homepage": "https://github.com/BitxorCorp/Bitxor-SDK-JavaScript#readme",
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "name": "bitxor-sdk",
@@ -68,7 +68,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+http://gitlab.local.bitxor.org/bitxor-nodejs-sdk/bitxor-sdk.git"
+    "url": "git+https://github.com/BitxorCorp/Bitxor-SDK-JavaScript.git"
   },
   "scripts": {
     "build": "",
@@ -87,5 +87,5 @@
     "watch": "tsc --watch"
   },
   "typings": "dist/index.d.ts",
-  "version": "1.0.1"
+  "version": "1.0.1.rxjs6"
 }
