--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@js-joda/core": "^3.2.0",
     "@types/node": "^9.6.0",
-    "bitxor-catbuffer-typescript": "git+http://gitlab.local.bitxor.org/bitxor-nodejs-sdk/bitxor-catbuffer-typescript.git#main",
-    "bitxor-openapi-typescript-fetch-client": "git+http://gitlab.local.bitxor.org/bitxor-nodejs-sdk/bitxor-openapi-typescript-fetch-client.git#main",
+    "bitxor-catbuffer-typescript": "1.0.1",
+    "bitxor-openapi-typescript-fetch-client": "1.0.1",
     "crypto-js": "^4.0.0",
     "futoin-hkdf": "^1.3.2",
     "js-sha256": "^0.9.0",
